--- a/GymReco/GymReco/Home/Base.lproj/Home.storyboard
+++ b/GymReco/GymReco/Home/Base.lproj/Home.storyboard
@@ -52,7 +52,7 @@
                                     <color key="titleColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="tapWentGymButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aXl-DD-RCJ"/>
+                                    <action selector="tapWentGymButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6CE-fs-7YV"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cF5-5D-JT9" userLabel="horizontalGymRecordStack">
