--- a/GymReco/GymReco/SideMenu/SideMenu.storyboard
+++ b/GymReco/GymReco/SideMenu/SideMenu.storyboard
@@ -1,7 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wDb-2y-e6G">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="vov-Lz-dIy">
+            <objects>
+                <viewController id="VlK-Gq-hq0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YPC-TU-XFh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CCk-eQ-zAm">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="CCk-eQ-zAm" firstAttribute="leading" secondItem="Mou-DB-T3A" secondAttribute="leading" id="71z-Sv-LB2"/>
+                            <constraint firstItem="Mou-DB-T3A" firstAttribute="trailing" secondItem="CCk-eQ-zAm" secondAttribute="trailing" id="BSo-TX-MYT"/>
+                            <constraint firstItem="CCk-eQ-zAm" firstAttribute="top" secondItem="Mou-DB-T3A" secondAttribute="top" id="MAK-Xu-eSH"/>
+                            <constraint firstItem="Mou-DB-T3A" firstAttribute="bottom" secondItem="CCk-eQ-zAm" secondAttribute="bottom" id="fzv-gd-qPT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Mou-DB-T3A"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SY5-BR-zOL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pau-mp-y5f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="971.01449275362324" y="60.9375"/>
+        </scene>
+        <!--Side Menu Navigation Controller-->
+        <scene sceneID="y53-wY-I8g">
+            <objects>
+                <navigationController storyboardIdentifier="SideMenu" automaticallyAdjustsScrollViewInsets="NO" id="wDb-2y-e6G" customClass="SideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vfm-6x-LFE">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftSide" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <segue destination="VlK-Gq-hq0" kind="relationship" relationship="rootViewController" id="pnl-bq-WrR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FG2-EP-3Q3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="60.869565217391312" y="60.9375"/>
+        </scene>
+    </scenes>
 </document>
