--- a/GymReco/GymReco/Record/AddButtonView.xib
+++ b/GymReco/GymReco/Record/AddButtonView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,17 +15,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2gB-2a-73E">
-                    <rect key="frame" x="26.5" y="19.5" width="30" height="30"/>
+                    <rect key="frame" x="0.0" y="0.0" width="83" height="69"/>
                     <state key="normal" title="+"/>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="2gB-2a-73E" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Koj-x2-cRc"/>
-                <constraint firstItem="2gB-2a-73E" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MId-Q9-p00"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="2gB-2a-73E" secondAttribute="bottom" id="0bN-QT-zpr"/>
+                <constraint firstItem="2gB-2a-73E" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="84v-Hi-3M2"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="2gB-2a-73E" secondAttribute="trailing" id="VBs-Xc-KPm"/>
+                <constraint firstItem="2gB-2a-73E" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="x3b-tU-VQd"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+            </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="361.59420289855075" y="408.14732142857139"/>
         </view>
     </objects>
